unpackaged/main/default/objects/pse__Proj__c/fields/pse__Project_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Status__c</fullName>
    <description>Select the current project status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</description>
    <inlineHelpText>Select the current project status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</inlineHelpText>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Contingent Delivery</fullName>
                <color>#0B6FCE</color>
                <label>Contingent Delivery</label>
            </value>
            <value>
                <fullName>Requires Follow-Up</fullName>
                <color>#78C953</color>
                <label>Requires Follow-Up</label>
            </value>
            <value>
                <fullName>Pending Closure</fullName>
                <color>#E27001</color>
                <label>Pending Closure</label>
            </value>
            <value>
                <fullName>Pending Signed SOW</fullName>
                <color>#A845DC</color>
                <label>Pending Signed SOW</label>
            </value>
            <value>
                <fullName>Info Needed</fullName>
                <color>#F3D904</color>
                <label>Info Needed</label>
            </value>
            <value>
                <fullName>New Order</fullName>
                <color>#A53711</color>
                <label>New Order</label>
            </value>
            <value>
                <fullName>Awaiting Cx Response</fullName>
                <color>#66E9BD</color>
                <label>Awaiting Cx Response</label>
            </value>
            <value>
                <fullName>Scheduling</fullName>
                <color>#0B24BE</color>
                <label>Scheduling</label>
            </value>
            <value>
                <fullName>Delivering Long-Term</fullName>
            </value>
            <value>
                <fullName>Delivering Short-Term</fullName>
            </value>
            <value>
                <fullName>Remaining Hours to be Scoped</fullName>
            </value>
            <value>
                <fullName>Pending Customer Contact</fullName>
            </value>
            <value>
                <fullName>Final Billing</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Awaiting Deferred Recognition</fullName>
            </value>
            <value>
                <fullName>Awaiting Sign-off / Closing Report</fullName>
            </value>
            <value>
                <fullName>Work at Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>