unpackaged/main/default/objects/pse__Proj__c/fields/pse__Project_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Status_Notes__c</fullName>
    <inlineHelpText>Use this field to track project status.  Make sure to delete existing notes when updating.  This field is added to the Project Notes History field.</inlineHelpText>
    <label>Project Status Notes</label>
    <type>TextArea</type>
</CustomField>