unpackaged/main/default/objects/pse__Proj__c/fields/pse__Project_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Type__c</fullName>
    <description>A descriptive classification of the project</description>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Time</fullName>
            </value>
            <value>
                <fullName>Customer Project</fullName>
                <default>true</default>
                <label>Customer Project</label>
            </value>
            <value>
                <fullName>Internal PS Initiative</fullName>
            </value>
            <value>
                <fullName>Paid Time Off</fullName>
            </value>
            <value>
                <fullName>Pre/Post Project Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>