unpackaged/main/default/objects/pse__Proj__c/fields/pse__Stage__c.field-meta.xml
<CustomField>
    <fullName>pse__Stage__c</fullName>
    <inlineHelpText>Track the stage in the project life cycle</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initialized</fullName>
                <default>true</default>
                <label>Initialized</label>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Close-Out</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>