unpackaged/main/default/objects/pse__Proj__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <inlineHelpText>Provides insight and clarity to Global/Internal Project set-up regarding specific Attribute setting that notably distinguish these Projects from each other.</inlineHelpText>
    <label>Purpose</label>
    <type>TextArea</type>
</CustomField>