unpackaged/main/default/objects/pse__Proj__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <description>IT3094347</description>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Backlog_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New Order</fullName>
            </value>
            <value>
                <fullName>Short Term - less than 1 Q</fullName>
            </value>
            <value>
                <fullName>Long Term - more than 1 Q</fullName>
            </value>
            <value>
                <fullName>Customer Hold 1 Quarter</fullName>
            </value>
            <value>
                <fullName>Customer Hold Greater than 2 Quarters</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Pending Customer Project Timelines</fullName>
            </value>
            <value>
                <fullName>Information required</fullName>
            </value>
            <value>
                <fullName>Non-Responsive Customer</fullName>
            </value>
            <value>
                <fullName>Requesting Scope</fullName>
            </value>
            <value>
                <fullName>SOW / CO in Progress</fullName>
            </value>
            <value>
                <fullName>Pending Signature</fullName>
            </value>
            <value>
                <fullName>Deferred Awaiting Recognition</fullName>
            </value>
            <value>
                <fullName>Project Completed / Canceled</fullName>
            </value>
            <value>
                <fullName>Non-Responsive Customer / Old Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>