unpackaged/main/default/objects/pse__Proj__c/fields/Reseller_Name__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Name__c</fullName>
    <formula>pse__Opportunity__r.Reseller_Company_Name_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Name</label>
    <type>Text</type>
</CustomField>