unpackaged/main/default/objects/pse__Proj__c/fields/RPG_Updated__c.field-meta.xml
<CustomField>
    <fullName>RPG_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RPG Updated</label>
    <type>Checkbox</type>
</CustomField>