unpackaged/main/default/objects/pse__Proj__c/fields/Sales_District__c.field-meta.xml
<CustomField>
    <fullName>Sales_District__c</fullName>
    <description>ADO 269310 Lift and Shift PSA</description>
    <formula>pse__Account__r.ETM_District_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales District</label>
    <type>Text</type>
</CustomField>