unpackaged/main/default/objects/pse__Proj__c/fields/Sales_Order_Number2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number2__c</fullName>
    <label>Sales Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>