unpackaged/main/default/objects/pse__Proj__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <description>ADO 269310 Lift and Shift PSA</description>
    <formula>pse__Opportunity__r.SalesOrder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Updated on the opportunity</inlineHelpText>
    <label>Sales Order Number</label>
    <type>Text</type>
</CustomField>