unpackaged/main/default/objects/pse__Proj__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <description>ADO 269310 Lift and Shift PSA</description>
    <formula>pse__Account__r.ETM_Region_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>