unpackaged/main/default/objects/pse__Proj__c/fields/SARK_Key__c.field-meta.xml
<CustomField>
    <fullName>SARK_Key__c</fullName>
    <description>Deprecating as part of PSA 2.0 data clean-up effort; Field to remain visible (read-only) until all in-flight Projects with SARK Key are Completed/Closed. ETA July 2021.
IT3087044. Melanie Kim.  Created new SARK Key field to accommodate mapping of SARK Key field from related Opportunity to Project object through Process Builder (Opportunity SARK Key)</description>
    <inlineHelpText>Deprecating as part of PSA 2.0 data clean-up effort; Field to remain visible (read-only) until all in-flight Projects with SARK Key are Completed/Closed. ETA July 2021.</inlineHelpText>
    <label>SARK Key</label>
    <length>500</length>
    <type>Html</type>
</CustomField>