unpackaged/main/default/objects/pse__Proj__c/fields/Service_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_ID__c</fullName>
    <formula>pse__Opportunity__r.Service_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used as a single identifier for annual or multi-year contracts.  Identifies which program and program version purchased.</inlineHelpText>
    <label>Service ID</label>
    <type>Text</type>
</CustomField>