unpackaged/main/default/objects/pse__Proj__c/fields/Service_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Service_Id_Text__c</fullName>
    <description>text field for service id - editable by admins only and hidden from users.  created to establish search capabilities.</description>
    <externalId>true</externalId>
    <label>Service Id Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>