unpackaged/main/default/objects/pse__Proj__c/fields/SO_Comments__c.field-meta.xml
<CustomField>
    <fullName>SO_Comments__c</fullName>
    <inlineHelpText>Enter notes on related SO’s, etc.</inlineHelpText>
    <label>SO Comments</label>
    <type>TextArea</type>
</CustomField>