unpackaged/main/default/objects/pse__Proj__c/fields/SOW_Attached__c.field-meta.xml
<CustomField>
    <fullName>SOW_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOW Attached</label>
    <type>Checkbox</type>
</CustomField>