unpackaged/main/default/objects/pse__Proj__c/fields/SOW_Status__c.field-meta.xml
<CustomField>
    <fullName>SOW_Status__c</fullName>
    <description>ADO 269310 Lift and Shift PSA</description>
    <formula>TEXT(pse__Opportunity__r.SOW_Status__c)</formula>
    <inlineHelpText>Only required for PSA approval to start a project without a sales order</inlineHelpText>
    <label>SOW Status</label>
    <type>Text</type>
</CustomField>