unpackaged/main/default/objects/pse__Proj__c/fields/Status_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Report_Date__c</fullName>
    <description>ADO 269310 Lift and Shift PSA</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Report Date</label>
    <type>Date</type>
</CustomField>