unpackaged/main/default/objects/pse__Proj__c/fields/Survey_Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response_Received__c</fullName>
    <description>Date that the Survey Response was received from the customer.</description>
    <inlineHelpText>Date that the Survey Response was received from the customer.</inlineHelpText>
    <label>Survey Response Received</label>
    <type>Date</type>
</CustomField>