unpackaged/main/default/objects/pse__Proj__c/fields/Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Survey_Status__c</fullName>
    <inlineHelpText>Use with 'Survey Response Received Date' to track Customer Survey metrics; interim solution until Gainsight access becomes globally available and integrated with PSA.</inlineHelpText>
    <label>Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Survey Sent</fullName>
            </value>
            <value>
                <fullName>Survey Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>