unpackaged/main/default/objects/pse__Proj__c/fields/TAP_Project__c.field-meta.xml
<CustomField>
    <fullName>TAP_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to TRUE if the project has related TAP Milestones that are in Planned status</description>
    <label>TAP Project</label>
    <type>Checkbox</type>
</CustomField>