unpackaged/main/default/objects/pse__Proj__c/fields/Target_Revenue_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Target_Revenue_Quarter__c</fullName>
    <description>M.Kim: 7/28/20:  Deprecating as part of PSA 2.0 clean-up. Initially created for PSA 1.0 but not utilized.</description>
    <inlineHelpText>M.Kim: 7/28/20:  Deprecating as part of PSA 2.0 clean-up. Initially created for PSA 1.0 but not utilized.</inlineHelpText>
    <label>Target Revenue Quarter</label>
    <type>Date</type>
</CustomField>