unpackaged/main/default/objects/pse__Proj__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <description>ADO 269310 Lift and Shift PSA</description>
    <formula>IF(pse__Region__r.Name = 'Americas' || pse__Region__r.Name = 'APCJ' || pse__Region__r.Name = 'EMEA',pse__Region__r.Name,pse__Region__r.Theater__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-populated based on Region. If Region is populated with Americas, EMEA, or APCJ, the Theater will be populated with the same value.</inlineHelpText>
    <label>Theater</label>
    <type>Text</type>
</CustomField>