unpackaged/main/default/objects/pse__Proj__c/fields/Time_Entry_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry_Guidance__c</fullName>
    <description>ADO 269310 Lift and Shift PSA</description>
    <inlineHelpText>Provides guidance on determining Internal/Global Project selection when submitting time for Non-Customer facing, Non-Billable work.</inlineHelpText>
    <label>Time Entry Guidance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>