unpackaged/main/default/objects/pse__Proj__c/fields/Total_Accounting_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Total_Accounting_Backlog__c</fullName>
    <description>Total of Unbilled, Deferred and Install reports that were current for latest upload.</description>
    <inlineHelpText>Total of Unbilled, Deferred and Install reports that were current for latest upload.</inlineHelpText>
    <label>Total Accounting Backlog</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>