unpackaged/main/default/objects/pse__Proj__c/fields/Total_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Hours__c</fullName>
    <description>ADO 269310 Lift and Shift PSA</description>
    <formula>pse__Billable_Internal_Hours__c + pse__Billable_External_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>