unpackaged/main/default/objects/pse__Proj__c/fields/Total_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Remaining__c</fullName>
    <formula>pse__Planned_Hours__c - pse__Billable_Internal_Hours__c - pse__Billable_External_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Billable Hours remaining to-date. Beginning balance reflects total hours at Project start and decreases as Time Cards are Approved for Billing or Revenue Recognition. [calculation = Billable Assignments minus Approved TC's].</inlineHelpText>
    <label>Total Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>