unpackaged/main/default/objects/pse__Proj__c/fields/Unbilled_Report_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unbilled_Report_Amount__c</fullName>
    <description>Upload of data from Unbilled 606 report for backlog postpaid revenue</description>
    <inlineHelpText>Upload of data from Unbilled 606 report for backlog postpaid revenue</inlineHelpText>
    <label>Unbilled Report Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>