unpackaged/main/default/objects/pse__Proj__c/fields/Unbilled_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Unbilled_Report_Date__c</fullName>
    <description>Date the Unbilled 606 report was sent that was used to upload Unbilled Report Amount field</description>
    <inlineHelpText>Date the Unbilled 606 report was sent that was used to upload Unbilled Report Amount field</inlineHelpText>
    <label>Unbilled Report Date</label>
    <type>Date</type>
</CustomField>