unpackaged/main/default/objects/pse__Proj__c/fields/Variable_Report_Amount__c.field-meta.xml
<CustomField>
    <fullName>Variable_Report_Amount__c</fullName>
    <description>Upload of data from Variable tab of Deferred report</description>
    <inlineHelpText>Upload of data from Variable tab of Deferred report</inlineHelpText>
    <label>Variable Report Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>