unpackaged/main/default/objects/pse__Proj__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>Deprecated as part of PSA 2.0</description>
    <inlineHelpText>Industry</inlineHelpText>
    <label>Vertical (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TELCO</fullName>
            </value>
            <value>
                <fullName>EDUCATION</fullName>
            </value>
            <value>
                <fullName>HEALTHCARE</fullName>
            </value>
            <value>
                <fullName>MANUFACTURING</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>TECHNOLOGY</fullName>
            </value>
            <value>
                <fullName>FINANCIAL</fullName>
            </value>
            <value>
                <fullName>MEDIA</fullName>
            </value>
            <value>
                <fullName>OTHER GOVERNMENT</fullName>
            </value>
            <value>
                <fullName>RETAIL</fullName>
            </value>
            <value>
                <fullName>UTILITIES/TRANSPORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>