unpackaged/main/default/objects/pse__Proj__c/recordTypes/Billable_Project.recordType-meta.xml
<RecordType>
    <fullName>Billable_Project</fullName>
    <active>true</active>
    <description>Use this Record Type for Project Management tracking of Professional Services delivered to Customers. Predominately Billable and Revenue generating. Always Time Credited, contributing to Productive Utilization. May be NonBillable in certain circumstances.</description>
    <label>Customer: Billable</label>
</RecordType>