unpackaged/main/default/objects/pse__Proj__c/recordTypes/Customer_Project.recordType-meta.xml
<RecordType>
    <fullName>Customer_Project</fullName>
    <active>true</active>
    <description>Use this Record Type for Project Management tracking of Professional Services delivered to Customers Free-of-Charge. NonBillable, yet always Time Credited so Hours worked contribute to Productive Utilization.</description>
    <label>Customer: FOC</label>
</RecordType>