unpackaged/main/default/objects/pse__Proj__c/recordTypes/Internal_Project.recordType-meta.xml
<RecordType>
    <fullName>Internal_Project</fullName>
    <active>true</active>
    <description>1/28/2021 M.Kim: DO NOT USE THIS RECORD TYPE. To be Inactivated once it can be disassociated from Platform Integration User Profile.</description>
    <label>DO NOT USE - FF.com Managed Pkg Record Type</label>
</RecordType>