unpackaged/main/default/objects/pse__Proj__c/recordTypes/Time_Credited_Project.recordType-meta.xml
<RecordType>
    <fullName>Time_Credited_Project</fullName>
    <active>true</active>
    <description>Use this Record Type to track Internal PS Initiatives. Always Time Credited which contributes to Productive Utilization. Can be included in Financials to track costs incurred. Examples: Scoping/Pre-Sale, Tech Summit, Employee Training.</description>
    <label>Internal: PS Initiative</label>
</RecordType>