unpackaged/main/default/objects/pse__Proj__c/recordTypes/Time_Excluded_Project.recordType-meta.xml
<RecordType>
    <fullName>Time_Excluded_Project</fullName>
    <active>true</active>
    <description>Use this Record Type to track Non-Project time. Always Time Excluded, neither counting for or against Productive Utilization. Available to all Resources for Time Entry. Assignment not required. Examples: Bench, Admin, Company Holidays, Vacation, Sick.</description>
    <label>Internal: Non Work</label>
</RecordType>