unpackaged/main/default/objects/pse__Proj__c/validationRules/Internal_Projects_cannot_be_billable.validationRule-meta.xml
<ValidationRule>
    <fullName>Internal_Projects_cannot_be_billable</fullName>
    <active>true</active>
    <description>Internal Projects cannot be billable</description>
    <errorConditionFormula>AND(
 RecordType.Name = "Internal Project",
 pse__Is_Billable__c = true
)</errorConditionFormula>
    <errorDisplayField>pse__Is_Billable__c</errorDisplayField>
    <errorMessage>Internal Projects cannot be billable</errorMessage>
</ValidationRule>