unpackaged/main/default/objects/pse__Proj__c/validationRules/Project_Locked_on_Completion_Prod.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Locked_on_Completion_Prod</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(PRIORVALUE(pse__Stage__c), "Work Completed"),
             ISPICKVAL(PRIORVALUE(pse__Stage__c), "Work Completed-Unused Hours"),
             ISPICKVAL(PRIORVALUE(pse__Stage__c), "Awaiting Customer Sign-off"),
             ISPICKVAL(PRIORVALUE(pse__Stage__c), "Sign-off Completed")),
             NOT(OR(
$Permission.PSA_Bypass_PROD_Admin =TRUE,/*Allow *F5 - PRODUCTION ADMIN profile*/
$Permission.PSA_Bypass_PS_Coordinators_profile =TRUE, /*Allow F5 - PS Coordinators*/
$Permission.PSA_Bypass_PS_Consulting_Managers=TRUE /*Allow *F5 - PS Consulting Managers */

)))</errorConditionFormula>
    <errorMessage>You may not make changes to a completed project.  Please contact your PS Coordinator or Administrator</errorMessage>
</ValidationRule>