unpackaged/main/default/objects/pse__Proj__c/validationRules/Reason_Code_Needed_for_Backlog_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Code_Needed_for_Backlog_Category</fullName>
    <active>true</active>
    <description>If a Backlog Category is Selected, make the Reason Code required</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL( Backlog_Category__c, "")),  ISPICKVAL(Reason_Code__c, "")
)</errorConditionFormula>
    <errorDisplayField>Reason_Code__c</errorDisplayField>
    <errorMessage>If a Backlog Category is Selected, you must select a Reason Code</errorMessage>
</ValidationRule>