unpackaged/main/default/objects/pse__Proj__c/listViews/Active_and_In_Progress.listView-meta.xml
<ListView>
    <fullName>Active_and_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Stage__c</columns>
    <columns>Sales_Order_Number__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Stage__c</field>
        <operation>equals</operation>
        <value>Initialized,Planning,In Progress</value>
    </filters>
    <filters>
        <field>pse__Region__c</field>
        <operation>equals</operation>
        <value>South Central</value>
    </filters>
    <label>Active and In Progress</label>
</ListView>