unpackaged/main/default/objects/pse__Proj__c/listViews/Active_Projects_Americas1.listView-meta.xml
<ListView>
    <fullName>Active_Projects_Americas1</fullName>
    <columns>PSA_Version__c</columns>
    <columns>Sales_Order_Number__c</columns>
    <columns>NAME</columns>
    <columns>pse__Project_Manager__c</columns>
    <columns>pse__Stage__c</columns>
    <columns>pse__Project_Status__c</columns>
    <columns>pse__Project_Status_Notes__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Theater__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Project_Type__c</field>
        <operation>equals</operation>
        <value>Customer Project</value>
    </filters>
    <filters>
        <field>pse__Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>pse__Proj__c.Billable_Project</value>
    </filters>
    <filters>
        <field>Theater__c</field>
        <operation>equals</operation>
        <value>Americas</value>
    </filters>
    <filters>
        <field>pse__Stage__c</field>
        <operation>equals</operation>
        <value>Initialized,Planning,In Progress,On Hold</value>
    </filters>
    <filters>
        <field>PSA_Version__c</field>
        <operation>equals</operation>
        <value>PSA 2.0</value>
    </filters>
    <label>Active Projects: Americas</label>
    <sharedTo>
        <group>PSA_Consulting_Mgmt_AMER</group>
        <group>PSA_PS_Sales_Mgmt_Mgr_Director_AMER</group>
        <group>PSA_Project_Mgmt_AMER</group>
        <group>PSA_Senior_Mgmt_Director_VP_AMER</group>
    </sharedTo>
</ListView>