unpackaged/main/default/objects/pse__Proj__c/listViews/Active_Projects_EMEA.listView-meta.xml
<ListView>
    <fullName>Active_Projects_EMEA</fullName>
    <columns>pse__Region__c</columns>
    <columns>Sales_Order_Number__c</columns>
    <columns>NAME</columns>
    <columns>pse__Project_Manager__c</columns>
    <columns>pse__Stage__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Theater__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Project_Type__c</field>
        <operation>equals</operation>
        <value>Customer Project</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>pse__Proj__c.Billable_Project</value>
    </filters>
    <filters>
        <field>Theater__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <filters>
        <field>pse__Stage__c</field>
        <operation>equals</operation>
        <value>Initialized,Planning,In Progress,On Hold</value>
    </filters>
    <label>Active Projects: EMEA</label>
    <sharedTo>
        <group>PSA_Consulting_Mgmt_EMEA</group>
        <group>PSA_Project_Mgmt_EMEA</group>
        <group>PSA_Senior_Mgmt_Director_VP_EMEA</group>
    </sharedTo>
</ListView>